Fixed the width of the page
when there are less than 3 articles, it was too narrow

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -29,3 +29,7 @@
 .scan-lines {
     background-color: transparentize(#eee8d5, 0.2);
 }
+
+.hidden {
+    visibility: hidden;
+}
